removed unused test and fixed deprecated method usage